--- a/style.css
+++ b/style.css
@@ -1,165 +1,165 @@
 body {
-    font-family: 'Press Start 2P', cursive;
-    background-color: #222831;
+  font-family: "Press Start 2P", cursive;
+  background-color: #1d2229;
 }
 
 section {
-    height: 100%;
+  height: 100%;
 }
 
 .score {
-    color: #949da3;
-    height: 20%;
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
+  color: #969b9f;
+  height: 20%;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
 }
 
 .intro {
-    color: #949da3;
-    height: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    padding: 10%;
-    transition: opacity ease 0.5s;
+  color: #969b9f;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10%;
+  transition: opacity ease 0.5s;
 }
 
 .heading {
-    padding: 4%;
+  padding: 4%;
 }
 
 .match {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: opacity 0.5s ease 0.5s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease 0.5s;
 }
 
 .winner {
-    text-align: center;
+  text-align: center;
 }
 
 .hand,
 .options {
-    justify-content: space-around;
-    align-items: center;
-    display: flex;
-
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
 }
 
 .player-hand {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 div.fadeOut {
-    opacity: 0;
-    pointer-events: none;
+  opacity: 0;
+  pointer-events: none;
 }
 
 div.fadeIn {
-    opacity: 1;
-    pointer-events: all;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .btn,
 .match button {
-    width: 170px;
-    height: 70px;
-    background: none;
-    border: none;
-    color: #949da3;
-    font-size: 20px;
-    background: #19282F;
-    border-radius: 3px;
-    cursor: pointer;
-    font-family: 'Press Start 2P';
+  width: 170px;
+  height: 70px;
+  background: none;
+  border: none;
+  color: #949da3;
+  font-size: 20px;
+  background: #19282f;
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: "Press Start 2P";
 }
 
-.btn:hover,.options.button {
-    background: #000000;
-    text-decoration: none;
+.btn:hover,
+.options.button {
+  background: #000000;
+  text-decoration: none;
 }
 
 @keyframes shakePlayer {
-    0% {
-        transform: rotateY(180deg) translateY(0px);
-    }
+  0% {
+    transform: rotateY(180deg) translateY(0px);
+  }
 
-    15% {
-        transform: rotateY(180deg) translateY(-50px);
-    }
+  15% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
 
-    25% {
-        transform: rotateY(180deg) translateY(0px);
-    }
+  25% {
+    transform: rotateY(180deg) translateY(0px);
+  }
 
-    35% {
-        transform: rotateY(180deg) translateY(-50px);
-    }
+  35% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
 
-    50% {
-        transform: rotateY(180deg) translateY(0px);
-    }
+  50% {
+    transform: rotateY(180deg) translateY(0px);
+  }
 
-    65% {
-        transform: rotateY(180deg) translateY(-50px);
-    }
+  65% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
 
-    75% {
-        transform: rotateY(180deg) translateY(0px);
-    }
+  75% {
+    transform: rotateY(180deg) translateY(0px);
+  }
 
-    85% {
-        transform: rotateY(180deg) translateY(-50px);
-    }
+  85% {
+    transform: rotateY(180deg) translateY(-50px);
+  }
 
-    100% {
-        transform: rotateY(180deg) translateY(0px);
-    }
+  100% {
+    transform: rotateY(180deg) translateY(0px);
+  }
 }
 
 @keyframes shakeComputer {
-    0% {
-        transform: translateY(0px);
-    }
+  0% {
+    transform: translateY(0px);
+  }
 
-    15% {
-        transform: translateY(-50px);
-    }
+  15% {
+    transform: translateY(-50px);
+  }
 
-    25% {
-        transform: translateY(0px);
-    }
+  25% {
+    transform: translateY(0px);
+  }
 
-    35% {
-        transform: translateY(-50px);
-    }
+  35% {
+    transform: translateY(-50px);
+  }
 
-    50% {
-        transform: translateY(0px);
-    }
+  50% {
+    transform: translateY(0px);
+  }
 
-    65% {
-        transform: translateY(-50px);
-    }
+  65% {
+    transform: translateY(-50px);
+  }
 
-    75% {
-        transform: translateY(0px);
-    }
+  75% {
+    transform: translateY(0px);
+  }
 
-    85% {
-        transform: translateY(-50px);
-    }
+  85% {
+    transform: translateY(-50px);
+  }
 
-    100% {
-        transform: translateY(0px);
-    }
+  100% {
+    transform: translateY(0px);
+  }
 }
-.footer{
-    text-align: center;
-    color: aliceblue;
-    padding-top: 7%;
+.footer {
+  text-align: center;
+  color: aliceblue;
+  padding-top: 7%;
 }
